tests/baselines/reference/amdDependencyCommentName2.errors.txt
tests/cases/compiler/amdDependencyCommentName2.ts(3,21): error TS2792: Cannot find module 'm2'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/amdDependencyCommentName2.ts (1 errors) ====
    ///<amd-dependency path='bar' name='b'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2792: Cannot find module 'm2'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    m1.f();